   - Bugfix: Reading message body (file)
   - Bugfix: Don't read whole body (maildir)
   - Bugfix: Check pointers in callbacks (in "src/gui.cc")
   - Bugfix: 64bit problem (debian bug #301853); note: The same problem is
        still present multiple times in the code; added this to TODO file;
        thanks to David Mosberger for reporting this bug
   - Added David Mosberger to contributors
   - Bugfix: Corrected string length types in "src/decoding.*" and
        "src/support.*" (64bit systems)
   - Bugfix: Crash in image selecting dialogs (thanks to David Mosberger for
        reporting this bug)
   - Feature: More information in unknown_internal_error() provided

Version 2.1.2		2005-03-26 17:28
 * Robert Sowada
   - Changed version to 2.1.2, updated spec file
   - Various small changes
   - Updated po files, German translation
   - Cleanup: Complete documentation of functions in "src/options.cc"
   - Bugfix: Allow storing of strings that contain spaces in string list
        options
   - Bugfix: Email address for bugs updated in "ChangeLog", "configure.ac",
        "NEWS"
   - Bugfix: Respect folding in mail header
   - Bugfix: Better handling of certain header lines
   - Bugfixes/Cleanup: Parsing of content type header field
   - Bugfix: Handling of quoted strings (IMAP4)
   - Feature: Support other encodings than "7bit" for all protocols
   - Feature: Error message if content type is not supported
   - Bugfix: Typo in mini help(thanks to Clytie Siddall for reporting this bug)
   - Bugfix: Bugs regarding the word "mail" (thanks to Clytie Siddall for
        reporting this bug)
   - Added Clytie Siddall to contributors
   - Feature: Support for "multipart/mixed" and "multipart/alternative" mails
   - Feature: Version saved to config file
   - Feature: Autoupdate of options that have new default values
   - Feature: Vietnamese translation (thanks to Clytie Siddall)
   - Added Clytie Siddall to translators