@@ -20,11 +20,15 @@ Version 2.1.3
         still present multiple times in the code; added this to TODO file;
         thanks to David Mosberger for reporting this bug
    - Added David Mosberger to contributors
-   - Bugfix: Corrected string length types in "src/decoding.*" and
-        "src/support.*" (64bit systems)
+   - Bugfix: Corrected string size types in "src/decoding.*", "src/mailbox.*"
+        "src/apop.*" and "src/support.*" (64bit systems)
+   - Checked files for incorrect string size type without problems:
+        "src/pop.*" and "src/pop3.*"
    - Bugfix: Crash in image selecting dialogs (thanks to David Mosberger for
         reporting this bug)
    - Feature: More information in unknown_internal_error() provided
+   - Documentation of Mailbox::parse()
+   - Bugfix: Throw exception if login line cannot be created (apop)
 
 Version 2.1.2		2005-03-26 17:28
  * Robert Sowada
